--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,10 +47,10 @@
     <string name="config_state_welcome_text">Vehicle Config State</string>
 
     <!-- App Auth -->
-    <string name="app_name_short">AppAuth</string>
+    <string name="app_name_short">Ctrl</string>
     <string name="auth_granted">Authorization granted</string>
-    <string name="intro_header">OpenID AppAuth Demo</string>
-    <string name="openid_logo_content_description">AppAuth Logo</string>
+    <string name="intro_header">Ctrl Tesla</string>
+    <string name="openid_logo_content_description">Ctrl Logo</string>
     <string name="refresh_token">Refresh token</string>
     <string name="access_token_expires_at">Access token expires at: %s</string>
     <string name="no_access_token_returned">No access token returned</string>
@@ -69,7 +69,7 @@
     <string name="custom_tab_label">"%1$s (custom tab)"</string>
     <string name="retry_label">Retry</string>
     <string name="not_authorized">Not authorized</string>
-    <string name="start_authorization">Start authorization</string>
+    <string name="start_authorization">Login</string>
     <string name="reauthorize">Reauthorize</string>
     <string name="sign_out">Sign out</string>
     <string name="no_access_token_expiry">Access time has no defined expiry</string>
